tests/valid/enum/payload_constructor.facet
enum Box {
  Wrap(unrestricted isize)
}

fn wrap(x: unrestricted isize) -> unrestricted Box {
  Box::Wrap(x)
}
