tests/invalid/return_type_error/ret_type_mismatch.facet
fn foo() -> unrestricted isize {
  true
}
